--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-DateTime==4.3
-numpy==1.21.3
-pandas==1.3.4
-pandas-datareader==0.10.0
-tabulate==0.8.9
+DateTime
+numpy
+pandas
+pandas-datareader
+tabulate
